fixed lourdes scc to remove cutoff of title added z-index

--- a/animated-portfolio/src/components/lourdes/Lourdes.scss
+++ b/animated-portfolio/src/components/lourdes/Lourdes.scss
@@ -2,11 +2,14 @@
 
 .lourdes {
    height: calc(100vh - 100px);
+  // height: 100vh;
   overflow: hidden;
   background: linear-gradient(180deg, #0c0c1d, #111132);
   position: relative;
   width: 100%;
-  margin-top: 20%;
+  margin-top: 10%;
+  margin-bottom: 20%;
+  z-index: 7;
 
   .wrapper {
    max-width: 1366px;
